change monogram text length on embroidered pdp

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1999,6 +1999,11 @@ body {
   &[disabled] {
     cursor: not-allowed;
   }
+
+  &[disabled] > * 
+  {
+    pointer-events:none;
+  }
 }
 
 .Button--primary {
